# hudi

./: .asf.yaml  .codecov.yml  RCA_Gluten_Velox_MOR_Failures.md  README.md  azure-pipelines-20230430.yml  deploy.sh  pom.xml
.github/workflows/: agent_gateway_ci.yml  bot.yml  commit_coauthor_validation.yml  maven_artifact_validation.yml  patch_coverage.yml  release_candidate_validation.yml
content/: 404.html  index.html  sitemap.xml
content/404/: index.html
content/blog/: index.html
content/ecosystem/: index.html
content/powered-by/: index.html
content/quickstart/: index.html
content/roadmap/: index.html
content/search/: index.html
content/slack/: index.html
content/videos/: index.html
docker/: README.md  build_docker_images.sh  setup_demo_local.sh  stop_demo_local.sh
docker/compose/: docker-compose_hadoop284_hive2310_spark353_amd64.yml  docker-compose_hadoop284_hive2310_spark353_arm64.yml  docker-compose_hadoop284_hive233_spark244.yml  docker-compose_hadoop340_hive2310_spark411_amd64.yml
hudi-agent-gateway/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
hudi-agent-gateway/src/hudi_agent_gateway/: __init__.py  __main__.py  agent.py  app.py  cli.py  config.py  llm.py  log.py  mcp_server.py  sessions.py
hudi-agent-gateway/src/hudi_agent_gateway/api/: chat.py  meta.py  models.py
hudi-agent-gateway/src/hudi_agent_gateway/tools/: __init__.py  guardrails.py  registry.py  trino_client.py  trino_tools.py
hudi-agent-gateway/src/hudi_agent_gateway/ui/: app.js  index.html  markdown.js  style.css
hudi-agent-gateway/tests/: conftest.py  test_agent_loop.py  test_api_meta.py  test_chat_sse.py  test_config.py  test_guardrails.py  test_llm.py  test_mcp.py  test_registry.py  test_sessions.py  test_trino_tools.py  test_ui.py
hudi-agent-gateway/tests/integration/: __init__.py  test_live_stack.py
hudi-aws/: pom.xml
hudi-azure/: pom.xml
hudi-cli/: pom.xml
hudi-client/: pom.xml
hudi-common/: pom.xml
hudi-examples/: pom.xml
hudi-flink-datasource/: pom.xml
hudi-gcp/: pom.xml
hudi-hadoop-common/: pom.xml
hudi-hadoop-mr/: pom.xml
hudi-integ-test/: pom.xml
hudi-io/: pom.xml
hudi-kafka-connect/: pom.xml
hudi-lakehouse/: .gitignore  README.md
hudi-platform-service/: pom.xml
hudi-spark-datasource/: pom.xml
hudi-sync/: pom.xml
hudi-tests-common/: pom.xml
hudi-timeline-service/: pom.xml
hudi-utilities/: pom.xml
hudi-utils/: generate_config.sh  pom.xml
release/: release_guide.md
rfc/: README.md
style/: checkstyle.xml  scalastyle.xml
website/: package.json
(+3945 files in other folders)
