# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hudi-agent-gateway"
description = "The Apache Hudi AI gateway: agent loop, MCP server, and chat UI over lakehouse tools"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dynamic = ["version"]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "langgraph>=1.0,<2",
  "langchain-core>=1.0,<2",
  "langchain-anthropic>=1.0",
  "langchain-openai>=1.0",
  "langchain-ollama>=1.0",
  "fastmcp>=2.10,<3",
  "trino>=0.330",
  "sqlglot>=25.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sse-starlette>=2.1",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.6",
  "mypy>=1.11",
]

[project.scripts]
hudi-agent-gateway = "hudi_agent_gateway.cli:main"

[project.urls]
Homepage = "https://hudi.apache.org"
Source = "https://github.com/apache/hudi"

[tool.setuptools.dynamic]
version = { attr = "hudi_agent_gateway.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hudi_agent_gateway = ["py.typed", "ui/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "ASYNC"]
# ASYNC109: `timeout` parameters are part of the tool-facing contract here;
# enforcement uses asyncio.wait_for internally.
ignore = ["ASYNC109"]

[tool.mypy]
python_version = "3.11"
strict = false
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
